sumo/tests/duarouter/alternatives/style2_input/errors/route/route_prob_false/errors.duarouter
Error: Attribute 'probability' in definition of route(alternative) '!1' is not a real number.
Quitting (on error).
